# TerraNova

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  FEATURE_REQUEST.yml  config.yml
.github/workflows/: release.yml
docs/: AI_TRANSPARENCY.md  CHANGELOG.md  McCals_Teachings.md
docs/planning/: ABOUT.md  CONTEXT.md  DESIGN_SYSTEMS.md  ROADMAP.md  SRS.md
src/: App.tsx  constants.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: hardware.rs  io.rs  mod.rs
src-tauri/src/schema/: density.rs
src/components/: ErrorBoundary.tsx
src/config/: keybindings.ts
src/data/: terranova-bundle.json
src/hooks/: useComparisonEvaluation.ts  useCompoundHandles.ts  useGlobalKeyboardShortcuts.ts  useKnifeTool.ts  useNodeInterjection.ts  usePreviewEvaluation.ts  useTauriIO.ts  useVoxelEvaluation.ts
src/languages/: hytale.ts  terranova.ts
src/nodes/: handleRegistry.ts  index.ts
src/preview/: visualsPreviewAdapter.ts  visualsShallowEvaluator.ts
src/schema/: constraints.ts  curves.ts  defaults.ts  fieldDescriptions.ts  material.ts  nodeTips.ts  schemaLoader.ts
src/stores/: configStore.ts  previewStore.ts  uiStore.ts
src/utils/: biomeSectionUtils.ts  curveEvaluators.ts  densityEvaluator.ts  dockRegistry.ts  exportAssetPack.ts  exportSvg.ts  fileTypeDetection.ts  graphGeometry.ts  hardwareDetect.ts  hytaleToInternal.ts  internalToHytale.ts  (+9 more)
(+82 files in other folders)
