[package]
name = "terranova"
version = "0.1.0"
description = "Offline design studio for Hytale World Generation V2"
authors = ["HyperSystemsDev"]
license = "LGPL-2.1"
edition = "2021"
rust-version = "1.77"

[lib]
name = "terranova_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fastnoise-lite = "1"
thiserror = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
